<resources>

    <string name="app_name">百菜价</string>
    <string name="locating">定位中</string>
    <string name="pic_placehold">图片</string>
    <string name="main_search_hint">按农产品名称搜索</string>
    <string name="main_price">查价格</string>
    <string name="main_provider">找供应商</string>
    <string name="main_list">采购清单</string>
    <string name="main_about">关于中农</string>
    <string name="main_service">会员服务</string>
    <string name="main_regist">注册/登录</string>
    <string name="main_ad_desc">广告图片</string>
    <string name="me">我</string>
    <string name="price_start">开始搜索</string>
    <string name="about_detail">\t深圳市中农数据有限公司（简称“中农数据”）深圳市农产品股份有限公司(SZ000061)旗下企业；专业的农产品大数据公司 ；专注于农产品大数据提供商和农产品价格数据权威服务平台；汇集全国几十家农产品批发市场的农产品数据；公司编制和发布了“前海   中国农产品批发价格系列指数”；服务于深圳3000多家采购商会员；为政府、企事业单位食堂、餐饮企业等提供价格参考服务。</string>
    <string name="service_1">\t\t手机端客户可免费查看全国各个市场5000多个品种的价格行情,并可添加100个品种到采购清单,收费会员可添加5000多个品种到采购清单</string>
    <string name="service_2">\t\t平台现有的会员服务:</string>
    <string name="service_3">\t\t5800元/年套餐</string>
    <string name="service_4">\t\t定制会员服务</string>
    <string name="service_5">\t\t招标信息服务</string>
    <string name="service_6">\t\t推广服务</string>
    <string name="service_7">\t\t详情请咨询客服热线</string>
    <string name="service_8">\t\t400-114-6668</string>
    <string name="login_phone">手机号码</string>
    <string name="login_pwd">登录密码</string>
    <string name="login_sure">登\t\t录</string>
    <string name="login_regist">注册帐号</string>
    <string name="login_text">登录即可查看全部数据，还能使用收藏功能，还没帐号，免费注册一个！</string>
    <string name="login_mobile_empty">手机号码不能为空</string>
    <string name="login_pwd_empty">密码不能为空</string>
    <string name="login_error">用户名或密码错误，请稍后再试</string>
    <string name="login_success">登录成功</string>
    <string name="error_msg">网络连接错误，请稍后再试</string>
    <string name="vip_title">中农会员</string>
    <string name="vip_exchange">切换帐号</string>
    <string name="vip_logout">退出登录</string>
    <string name="regist_hint_pwd">6-14位密码，建议由数字、字母组成</string>
    <string name="regist_hint_contact">联系人姓名</string>
    <string name="regist_hint_mail">常用邮箱</string>
    <string name="regist_hint_card">单位名称</string>
    <string name="regist_hint_option">(可不填)</string>
    <string name="regist_agree">《中农数据服务协议》</string>
    <string name="regist_submit">免费注册</string>
    <string name="regist_contact_tips">联系人姓名不能为空</string>
    <string name="regist_mail_tips">邮箱不能为空</string>
    <string name="regist_agree_tips">请选择是否同意服务协议</string>
    <string name="regist_success">恭喜您！注册成功</string>
    <string name="agree_agree">同意</string>
    <string name="agree_title">中农数据服务协议</string>
    <string name="provider_search">查看</string>
    <string name="provider_item_main">主营产品：</string>
    <string name="provider_item_contact">联\t系人：</string>
    <string name="provider_item_phone">联系电话：</string>
    <string name="provider_item_address">公司地址：</string>
    <string name="provider_detail_intro">公司简介</string>
    <string name="provider_detail_promise">服务承诺</string>
    <string name="provider_search_hint">按供应商名称搜索</string>
    <string name="provider_search_title">供应商查询</string>
    <string name="price_search_tips">未登录只能查看三个月前的数据，请登录</string>
    <string name="price_name">品名</string>
    <string name="price_spec">规格</string>
    <string name="price_rprice">批发价</string>
    <string name="price_unit">单位</string>
    <string name="price_priceIndex">购买指数</string>
    <string name="price_marketShort">价格来源</string>
    <string name="price_releaseDate">报价日期</string>
    <string name="price_list">采购清单</string>
    <string name="price_addlist">长按加入清单</string>
    <string name="price_detail_addlist">加入清单</string>
    <string name="price_detail_dellist">移除清单</string>
    <string name="list_tips">您尚未登录，暂时无法使用此功能</string>
	<string name="detail_name">品\t\t名:</string>
		<string name="detail_aliasname">别\t\t名:</string>
    <string name="detail_spec">规\t\t格:</string>
    <string name="detail_rprice">批发价:</string>
    <string name="detail_priceIndex">购买指数:</string>
    <string name="detail_marketShort">价格来源:</string>
    <string name="detail_releaseDate">报价日期:</string>
    <string name="detail_prices_city">城市</string>
    <string name="log_tag">lynntag</string>
    <string name="key_username">UserName</string>
    <string name="key_userid">UserId</string>
    <string name="SERVER_STR">8Z3anAKeNmQdMnmFFkpa6SElEJQ=</string>
    <string name="CLIENT_STR">1337829</string>
    <string name="URL_IPINFO">http://test.chinaap.com/mobile/admin/ipInfo</string>
    <string name="URL_LOGIN">http://test.chinaap.com/mobile/user/loginUser</string>
    <string name="URL_USERREGIST">http://test.chinaap.com/mobile/user/userRegister</string>
    <string name="URL_CITYINFO">http://test.chinaap.com/mobile/admin/cityInfo</string>
    <string name="URL_TYPEINFO">http://test.chinaap.com/mobile/admin/getCityCategoryInfo</string>
    <string name="URL_PROVIDERLIST">http://test.chinaap.com/mobile/provider/ia/findProviderList</string>
    <string name="URL_PROVIDERSEARCH">http://test.chinaap.com/mobile/provider/ia/findProviderList</string>
    <string name="URL_PRICEINFO">http://test.chinaap.com/mobile/admin/priceInfo</string>
    <string name="URL_FINDPRICE">http://test.chinaap.com/mobile/product/findProductList</string>
    <string name="URL_ADDLIST">http://test.chinaap.com/mobile/admin/addCollection</string>
    <string name="URL_DELLIST">http://test.chinaap.com/mobile/admin/cancelCollection</string>
	<string name="URL_PRICEAREA">http://test.chinaap.com/mobile/price/priceArea</string>
	<string name="URL_PRICEHISTORY">http://test.chinaap.com/mobile/price/priceInfo</string>
	<string name="URL_2PROVIDER">http://test.chinaap.com/mobile/provider/findProviderByProductId</string>
    <drawable name="color_topback">#3588d3</drawable>
    <drawable name="color_white">#ffffff</drawable>
    <drawable name="color_text">#4a4a4a</drawable>
    <drawable name="color_orange">#ff6600</drawable>
    <drawable name="color_stroke">#e4e4e4</drawable>
    <drawable name="color_background">#fafafa</drawable>
    <drawable name="color_lightgray">#999999</drawable>
    <drawable name="color_grayback">#f5f5f5</drawable>
    <drawable name="color_black">#000000</drawable>
    <drawable name="color_textRed">#ff0000</drawable>
    <drawable name="color_purple">#a700b1</drawable>

</resources>