<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_white"
    android:orientation="vertical" >

    <!-- 顶部导航栏 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@drawable/color_topback" >

        <ImageView
            android:id="@+id/service_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/pic_placehold"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bank_home_ico" />

        <TextView
            android:id="@+id/main_city"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/main_service"
            android:textColor="@drawable/color_white"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/service_1"
        android:textColor="@drawable/color_text"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/service_2"
        android:textColor="@drawable/color_text"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/service_3"
        android:textColor="@drawable/color_orange"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/service_4"
        android:textColor="@drawable/color_text"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/service_5"
        android:textColor="@drawable/color_text"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/service_6"
        android:textColor="@drawable/color_text"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/service_7"
        android:textColor="@drawable/color_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/service_dail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/service_8"
        android:textColor="@drawable/color_orange"
        android:textSize="16sp" />

</LinearLayout>