<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/color_grayback"
    android:focusable="false"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/detail_prices_city"
        android:textColor="@drawable/color_text"
        android:textSize="14sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:text="@string/price_rprice"
        android:textColor="@drawable/color_text"
        android:textSize="14sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/detail_marketShort"
        android:textColor="@drawable/color_text"
        android:textSize="14sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/detail_releaseDate"
        android:textColor="@drawable/color_text"
        android:textSize="14sp" />

</LinearLayout>