<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/color_grayback"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/item_price_head_name"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/price_name"
        android:textColor="@drawable/color_text"
        android:textSize="14sp" />

    <com.example.wegame.InterceptScrollContainer
        android:id="@+id/scroollContainter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/item_price_head_name"
        android:focusable="false" >

        <com.example.wegame.LHScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/item_price_head_spec"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/price_spec"
                    android:textColor="@drawable/color_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/item_price_head_rprice"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/price_rprice"
                    android:textColor="@drawable/color_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/item_price_head_unit"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/price_unit"
                    android:textColor="@drawable/color_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/item_price_head_priceIndex"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/price_priceIndex"
                    android:textColor="@drawable/color_text"
                    android:textSize="14sp" />
				<ImageView 
				    android:id="@+id/item_price_head_arrow"
				    android:layout_width="10dp"
				    android:layout_height="10dp"
				    android:layout_marginTop="5dp"
				    android:src="@drawable/icon_none"
				    android:scaleType="centerInside"/>
                <TextView
                    android:id="@+id/item_price_marketShort"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/price_marketShort"
                    android:textColor="@drawable/color_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/item_price_head_releaseDate"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/price_releaseDate"
                    android:textColor="@drawable/color_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/item_price_head_list"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/price_list"
                    android:textColor="@drawable/color_text"
                    android:textSize="14sp" />
            </LinearLayout>
        </com.example.wegame.LHScrollView>
    </com.example.wegame.InterceptScrollContainer>

</RelativeLayout>