<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:focusable="false"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/price_history_releaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/price_releaseDate"
        android:textColor="@drawable/color_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/price_history_rprice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:text="@string/price_rprice"
        android:textColor="@drawable/color_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/price_history_market"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/price_marketShort"
        android:textColor="@drawable/color_text"
        android:textSize="14sp" />

</LinearLayout>