<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 顶部导航栏 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@drawable/color_topback" >

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/pic_placehold"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bank_home_ico" />

        <TextView
            android:id="@+id/main_city"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/main_regist"
            android:textColor="@drawable/color_white"
            android:textSize="16sp" />
    </RelativeLayout>
    <!-- 内部输入内容 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_content_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/color_stroke"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingTop="0dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@drawable/color_background"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/reg_ico_d" />

                <EditText
                    android:id="@+id/login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/login_phone_bg"
                    android:hint="@string/login_phone"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:background="@drawable/color_stroke"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingTop="0dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@drawable/color_background"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/reg_ico_c" />

                <EditText
                    android:id="@+id/login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/login_phone_bg"
                    android:hint="@string/login_pwd"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/login_login"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_sure_bg"
                    android:text="@string/login_sure"
                    android:textColor="@drawable/color_white" />

                <Button
                    android:id="@+id/login_regist"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_regist_bg"
                    android:text="@string/login_regist"
                    android:textColor="@drawable/color_white" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_text"
            android:textColor="@drawable/color_text" />
    </LinearLayout>

</LinearLayout>