<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/color_white">

    <!-- 顶部导航栏 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@drawable/color_topback" >

        <ImageView
            android:id="@+id/info_back"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/pic_placehold"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bank_home_ico" />

        <TextView
            android:id="@+id/main_city"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/main_about"
            android:textColor="@drawable/color_white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >
        <ImageView 
            android:layout_width="156dp"
            android:layout_height="44dp"
            android:scaleType="centerInside"
            android:src="@drawable/about_logo"
            android:layout_centerInParent="true"
            android:contentDescription="@string/pic_placehold"/>
        
    </RelativeLayout>
        <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" 
        android:padding="10dp">
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_detail"
            android:textSize="18sp"
            android:textColor="@drawable/color_text"/>
        
    </RelativeLayout>

</LinearLayout>